# metaral

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  coord_sanity.cpp  minimal_viewer.cpp  vulkan_viewer.cpp  world_fill.cpp
include/metaral/core/: coords.hpp
include/metaral/core/task/: task_pool.hpp
include/metaral/platform/: platform.hpp
include/metaral/render/: camera.hpp  fluid_compute.hpp  raymarch.hpp  sdf_collision_field.hpp  sdf_grid.hpp  vulkan_renderer.hpp
include/metaral/sim/: density_grid.hpp  fluid_system.hpp  sph_fluid.hpp
include/metaral/world/: chunk.hpp  chunk_inbox.hpp  chunk_provider.hpp  chunk_store.hpp  chunk_streamer.hpp  edit.hpp  terrain.hpp  world.hpp
shaders/: analytic_sphere.frag  fluid_bitonic_sort.comp  fluid_bucket_count.comp  fluid_bucket_prefix.comp  fluid_clear_volume.comp  fluid_common.glsl  fluid_density.comp  fluid_external_forces.comp  fluid_integrate.comp  fluid_pressure.comp  fluid_radix_scatter.comp  fluid_range_mark.comp  fluid_range_scan_backward.comp  fluid_range_scan_forward.comp  fluid_reorder.comp  fluid_spatial_hash.comp  fluid_splat_volume.comp  fluid_viscosity.comp  fullscreen_triangle.vert  sdf_octree.glsl
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/io/: CMakeLists.txt
src/platform/: CMakeLists.txt  sdl_platform.cpp
src/render/: CMakeLists.txt  camera.cpp  fluid_compute.cpp  raymarch.cpp  sdf_collision_field.cpp  sdf_grid.cpp  vulkan_renderer.cpp
src/sim/: CMakeLists.txt  density_grid.cpp  fluid_system.cpp  sph_fluid.cpp
src/tools/: CMakeLists.txt
src/world/: CMakeLists.txt  chunk_provider.cpp  chunk_store.cpp  chunk_streamer.cpp  edit.cpp  terrain.cpp  world.cpp
